amaroK ChangeLog
================
(c) 2002-2005 the amaroK authors.


VERSION 1.2-beta4:
  CHG: Reorganized the DCOP interface. We used to have all DCOP functions
       in the "player" group. Now it's splitted up into several
       categories. Attention script writers: Adjust your DCOP calls!
  FIX: The loader is now more robust and should always find amarokapp.
  CHG: The search-browser has been integrated into the file-browser.
  CHG: OSD can have fake transparency and new fancy shadow.
  ADD: DCOP function "shortStatusMessage", shows a temporary message
       on the application's statusbar.
  FIX: Frequent crashes when writing tags. (BR 95344)
  FIX: CoverManager updates its status display correctly.
  FIX: "isPlaying" DCOP function now works correctly. (BR 90894)
  ADD: Automatic crash report generator, sends backtraces to amaroK HQ.
  ADD: DCOP function "saveCurrentPlaylist". Writes the playlist to
       current.xml, for scripts that need to access the playlist contents.
  ADD: Playlist2html, a script for playlist exporting. (BR 96199)
  ADD: Improved statusbar, with animated error notification widget.
  ADD: New progress display system, can show multiple expandable
       progress widgets in the statusbar.
  ADD: Alarm script, starts playing music at specified alarm time.
  ADD: Script-Manager for DCOP script extensions is now functional. Refer
       to the amaroK Wiki for information on script writing.
  ADD: Collection-Browser shows a help message in flat-mode when filter is
       empty. (BR 97000)
  CHG: It is possible to select the Database Engine (SQLite, MySQL) runtime,
       without amaroK restart. New Database Engines can be added, they need
       to inherit DbConnection and implement its' virtual methods (see
       SqliteConnection and MySqlConnection).
  CHG: New amaroK icon "Blue Wolf", made by Da-Flow.
  FIX: Possible crash when enabling Player-Window. (BR 94668)

VERSION 1.2-beta3: